[package]
name = "mirumi-tech"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.0"
aws-sdk-dynamodb = "0.25.0"
aws-sdk-s3 = "0.25.0"
axum = "0.6.12"
base64 = "0.21.0"
chrono = "0.4.24"
chrono-tz = "0.8.1"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
hyper = "0.14.25"
image = "0.24.6"
lambda_http = { version = "0.7.3"}
lambda_runtime = "0.7.3"
once_cell = "1.17.1"
regex = "1.7.3"
serde = "1.0.136"
serde_json = "1.0.94"
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
